Add dependency on php5

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://github.com/cybfr/php-psr-log
 
 Package: php-psr-log
 Architecture: all
-Depends:  ${misc:Depends}
+Depends:  php5 | php5-cli, ${misc:Depends}
 Description: common interface for logging libraries
  The main goal is to allow libraries to receive a Psr\Log\LoggerInterface object
  and write logs to it in a simple and universal way. Frameworks and CMSs that
